--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </nav>
+    </header>
     <p>hej</p>
   </body>
 </html>
