--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
       </nav>
     </header>
     <p>hej</p>
+    <main>
+      <article>
+        <h1>Menu 1</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae
+          quae, quaerat aliquam eos voluptas non repellendus soluta doloremque?
+          Error neque molestiae explicabo vel! Est, esse. Porro eveniet
+          cupiditate quibusdam fuga.
+        </p>
+      </article>
+    </main>
   </body>
 </html>
